# n-body

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  compile_shaders.py  gui.h  main.c
include/: camera.h  constants.h  ghost.h  graphics.h  gui.h  prediction.h  sdl_utils.h  simulation.h  trails.h  trajectories.h  trajectory.h
lib/: HandmadeMath.h  arena.h  camera.h  draw.h  gui.h  list.h  raygui.h  sdl_utils.h  simulation.h  types.h
lib/raylib/: raygui.h
src/: application.h  camera.c  camera.h  constants.h  draw.h  ghost.c  graphics.c  gui.c  gui.h  input.h  main.c  main.h  prediction.c  predictor.h  setups.h  simulation.c  simulation.h  trails.c  trajectories.c  trajectory.c
src/shaders/: camera.comp.glsl  circle.frag.glsl  circle.vert.glsl  ghost.comp.glsl  ghost.vert.glsl  ghost_trajectory.comp.glsl  prediction.vert.glsl  simulation.comp.glsl  trail.comp.glsl  trail.vert.glsl  trajectory.comp.glsl
src/shaders/graphics/: body.vert.glsl  circle.frag.glsl  ghost_body.vert.glsl  ghost_prediction.vert.glsl  ghost_trajectory.vert.glsl  trail.vert.glsl  trajectory.vert.glsl
src/shaders/lib/: conditionals.lib.glsl
src/shaders/simulation/: euler.comp.glsl  gravity.lib.glsl  rk4.comp.glsl  runge_kutta.comp.glsl  verlet.comp.glsl
